# postulats-vd

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.py  downloader.py  pyproject.toml  run.py  setup.bat  setup.sh  test_downloader.py  test_skip_functionality.py  vaud_pdf_downloader.py
output/: storage.json
scripts/: run.py
src/: downloader.py  logging_utils.py  storage.py  test_downloader.py  test_logging_utils.py  test_storage.py
src/postulats_vd/: __init__.py
src/postulats_vd/config/: __init__.py  settings.py
src/postulats_vd/core/: __init__.py  downloader.py  file_downloader.py  session_extractor.py  session_lister.py  sessionfinder.py  storage.py
src/postulats_vd/utils/: __init__.py  date_parser.py  html_fetcher.py  logging.py  url.py  web_fetcher.py
tests/: __init__.py  conftest.py  test_core_downloader.py  test_core_sessionFinder.py  test_core_session_extractor.py  test_core_session_lister.py  test_core_storage.py  test_html_fetcher.py  test_utils_logging.py  test_web_fetcher.py
