[project]
name = "telechargeur-postulats-vd"
version = "1.0.0"
description = "Application Python qui télécharge automatiquement les postulats du Grand Conseil vaudois"
authors = [{ name = "Hugues Le Gendre", email = "hugues@ikivox.org" }]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.2",
  "lxml>=4.9.3",
  "urllib3>=2.0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
