[project]
name = "postulats-vd"
version = "1.0.0"
description = "Application Python qui télécharge automatiquement les postulats du Conseil d'Etat du Canton de Vaud"
authors = [{ name = "Hugues Le Gendre", email = "hugues@ikivox.org" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.13",
  "lxml>=4.9.3",
  "urllib3>=2.0.7",
]

[dependency-groups]
dev = ["pytest>=7.0.0", "ruff>=0.12.0"]

[project.scripts]
postulats-vd = "scripts.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postulats_vd"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ['.venv']
lint.ignore = ['F541', 'E501']


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
